tests/paczka1/small_fuzzy/80984648.err
Error in line 1: F75 A#1# 77,0
Error in line 2: F75 S514 31,1
